--- a/fs-admin.css
+++ b/fs-admin.css
@@ -36,22 +36,13 @@ button:focus {outline:0;}
 div#beacon-container .fcy-19yda2i {
 	margin-bottom:-50px;
 }
-
+button.sc-Axmtr.jvRQwl{
+	display:none!important;
+}
 #adminmenu .wp-menu-image img {
 	max-width:18px;
 }
-/*
-body{
-	background:#ffffff;
-}
-a{
-	color:rgb(49, 165, 73);
-	font-weight:500;
-}
-a:hover{
-	color:rgb(49, 165, 73);
-	font-weight:600;
-}
+
 
 /*FS Custom Widget Styles */
 #fs_support_widget h2.hndle {
@@ -80,23 +71,46 @@ a:hover{
 	color:#ffffff;
 }
 /* Custom Help Widget Button Styles */
-
+#fs-help-button-container{
+	display:flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
 .fs-help-button{
+	background:none;
+	border:none;
+}
+.fs-help-button a{
 	background:#00B140;
 	padding: 5px 15px 5px 15px;
 	border-radius:2px;
-	border:solid 1px #50b849;
 
 }
-.fs-help-button:hover{
+.fs-help-button a:hover{
 	background:#d7e040;
-	padding: 5px 15px 5px 15px;
-	border-radius:2px;
-	border:solid 1px #d7e040;
-	transition-duration: .5s;
+	transition-duration: .3s;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+@media (min-width:150px) and (max-width:480px){
+	.fs-help-button{
+		min-width:100%;
+		margin:10px;
+	}
+}
 
+@media (min-width:800px) and (max-width:897px){
+		.fs-help-button{
+		min-width:100%;
+		margin:10px;
+	}
+}
+@media (min-width:961px) and (max-width:1012px){
+		.fs-help-button{
+		min-width:100%;
+		margin:10px;
+	}
+}
+/* FS Admin Menu Page Style */
 .kb_container{
 	position: relative;
     padding-bottom: 75%;
@@ -109,194 +123,7 @@ a:hover{
     left: 0;
     width: 100%;
     height: 100%;
+	overflow:hidden;
 }
 
 
-/* For later inclusion of an Admin Dashboard Theme | Incomplete
-.wp-core-ui .button-primary {
-	background:rgb(49, 165, 73)!important;
-    border-color: rgba(49, 165, 73, 0.85)!important;
-    box-shadow: none;
-    color: #fff!important;
-	font-weight:500;
-    text-decoration: none;
-    text-shadow: 0 -1px 1px rgb(49, 165, 73), 1px 0 1px rgb(49, 165, 73), 0 1px 1px rgb(49, 165, 73), -1px 0 1px rgb(49, 165, 73);
-}
-
-.wp-core-ui .button-primary:hover {
-	background:#d7e040!important;
-	background-size: cover;
-    border-color: #d7e040!important;
-    box-shadow: none;
-    color: #333!important;
-	font-weight:700;
-    text-decoration: none;
-    text-shadow: 0 -1px 1px #d7e040, 1px 0 1px #d7e040, 0 1px 1px #d7e040, -1px 0 1px #d7e040;
-	-webkit-transition: 0.25s; /* Safari prior 6.1 */
- /*   transition: 0.25s;
-}
-.postbox .hndle{
-	border:none!important;
-}
-.wp-core-ui .button {
-    color: rgb(49, 165, 73);
-    border-color: rgb(49, 165, 73);
-    background: none;
-    vertical-align: top;
-}
-.wp-core-ui .button:hover {
-    color: white;
-    border-color: rgb(49, 165, 73);
-    background: rgb(49, 165, 73);
-    vertical-align: top;
-} */
-/*
-.wrap .page-title-action:hover{
-	color: white;
-    border-color: rgb(49, 165, 73);
-    background: rgb(49, 165, 73);
-}
-.wrap .page-title-action{
-	color: rgb(49, 165, 73);
-    border-color: rgb(49, 165, 73);
-    background: none;
-}
-
-/* Begin #wpadminbar styling */
-/*
-#wpadminbar {
-    direction: ltr;
-    color: #333;
-    font-size: 13px;
-    font-weight: 600;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-    line-height: 32px;
-    height: 32px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-width: 600px;
-    z-index: 99999;
-    background: rgb(49, 165, 73);
-	background-image: url(https://griffinpsychiatry-sandbox.mystagingwebsite.com/wp-content/uploads/hero-banner-shapes-v20-2.svg);
-	background-size: cover;
-	background-position: right bottom;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-#wpadminbar * {
-    height: auto;
-    width: auto;
-    margin: 0;
-    padding: 0;
-    position: static;
-    text-shadow: none;
-    text-transform: none;
-    letter-spacing: normal;
-    font-size: 13px;
-    font-weight: 600;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-    line-height: 32px;
-    border-radius: 0;
-    box-sizing: content-box;
-    transition: none;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -moz-osx-font-smoothing: auto;
-}
-
-.display-name {
-	color:#333!important;
-}
-.ab-top-secondary .ab-top-menu{
-	color:#333!important;
-}
-#wpadminbar .ab-top-secondary a{
-	color:#333!important;
-
-}
-/* End #wpadminbar Styling */
-
-/* Admin Menu Styles  */
-/*
-.dashicons { color: red!important; }
-#adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
-    width: 160px;
-}
-
-
-
-#adminmenu{
-	border-radius: 0px 0px 200px 0px;
--moz-border-radius: 0px 0px 200px 0px;
--webkit-border-radius: 0px 0px 200px 0px;
-
-
-}
-#adminmenu li.wp-has-current-submenu a.wp-has-current-submenu{
-	background-color: rgb(49, 165, 73);
-}
-#adminmenu li.wp-has-current-submenu a.wp-has-current-submenu:hover{
-	background-color: rgba(215, 224, 64, 1.0);
-	color:#333333;
-
-}
-
-#adminmenu .wp-has-current-submenu .wp-submenu{
-
-}
-
-#adminmenu a:hover {
-	color: rgb(49, 165, 73)!important;
-}
-
-#adminmenu .wp-menu-image img {
-    padding: 9px 0 0 0;
-    opacity: .6;
-    max-width: 18px;
-    filter: alpha(opacity=60);
-}
-
-#adminmenu li.current a.menu-top{
-	background:rgb(49, 165, 73)!important;
-	color: white!important;
-
-}
-/*
-#adminmenuwrap::before{
-	background:rgb(49, 165, 73);
-	background-size: cover;
-	content:'<img src="https://freshysites.com/wp-content/uploads/hero-banner-shapes-v04.svg">';
-	min-height:75px;
-	max-height:75px;
-	margin-top:15px;
-	margin-bottom:15px;
-
-} */
-
-/* ***Plugin Page Styles*** */
-/*comment
-.plugins .active td{
-	background:rgba(49, 165, 73, 0.10);
-}
-.plugins .active th {
-    background-color: rgba(49, 165, 73, 0.10);
-}
-.plugins .active th.check-column {
-    border-left: 4px solid rgba(49, 165, 73, 1);
-}
-.plugin-update-tr.active td, .plugins .active th.check-column {
-    border-left: 4px solid rgba(49, 165, 73, 1);
-}
-
-/*  Start Notice Styles  */
-/*Comment
-.notice-warning.notice-alt {
-    background-color: rgba(215,224,64,0.15);
-}
-
-.notice-warning {
-    border-left-color: #d7e040!important;
-}
-
-/* End Notice Syles */
